--- a/EssentialLayersNS/EssentialLayers.csproj
+++ b/EssentialLayersNS/EssentialLayers.csproj
@@ -16,6 +16,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="..\shared\essential-layers.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	  <None Include="..\shared\Readme.md">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
