--- a/EssentialLayersNS/EssentialLayers.csproj
+++ b/EssentialLayersNS/EssentialLayers.csproj
@@ -13,6 +13,7 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Dapper Results Cache Error Handling Blobs Helpers Exstension Web-Requests</PackageTags>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
