--- a/EssentialLayersNS/EssentialLayers.csproj
+++ b/EssentialLayersNS/EssentialLayers.csproj
@@ -7,13 +7,13 @@
 		<Product>MSoto Company</Product>
 		<Company>MSoto Company</Company>
 		<Copyright>msotomor</Copyright>
-		<PackageProjectUrl></PackageProjectUrl>
+		<PackageProjectUrl>https://essentiallayers.dev</PackageProjectUrl>
 		<PackageIcon>essential-layers.png</PackageIcon>
 		<RepositoryUrl>https://github.com/MatProgrammerSM/EssentialLayers</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Dapper Results Cache Error Handling Blobs Helpers Exstension Web-Requests</PackageTags>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
-		<Version>1.1.0</Version>
+		<Version>1.1.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -33,6 +33,7 @@
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="Serilog" Version="4.0.1" />
 	</ItemGroup>
 
 </Project>
