--- a/EssentialLayersNS/EssentialLayers.csproj
+++ b/EssentialLayersNS/EssentialLayers.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>12.0</LangVersion>
-		<Description>Essential layers to start a project from scratch with a structure designed in Dapper, Results, Cache, Error handling, Blobs, Helpers, Extensions and web requests</Description>
+		<Description>Essential layers to start a project from scratch with a structure designed in Dapper, Results, Cache, Error-handling, Logger, Blobs, Helpers, Extensions and web requests</Description>
 		<Product>MSoto Company</Product>
 		<Company>MSoto Company</Company>
 		<Copyright>msotomor</Copyright>
@@ -13,7 +13,7 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Dapper Results Cache Error Handling Blobs Helpers Exstension Web-Requests</PackageTags>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
-		<Version>1.1.3</Version>
+		<Version>1.1.4</Version>
 		<Title>Essential Layers</Title>
 	</PropertyGroup>
 
