--- a/EssentialLayers/EssentialLayers.csproj
+++ b/EssentialLayers/EssentialLayers.csproj
@@ -1,41 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <OutputType>Library</OutputType>
-    <StartupObject>EssentialLayers.MainClass</StartupObject>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Title>Essential Layers</Title>
-    <Company>MSoto Company</Company>
-    <Product>Essential Layers</Product>
-    <Description>Essential layers to start a project from scratch with a structure designed in Dapper, Results, Cache, Error handling, Blobs, Helpers, Extensions and web requests</Description>
-    <Copyright>msotomor</Copyright>
-    <PackageIcon>essential-layers.png</PackageIcon>
-    <RepositoryUrl>https://github.com/MatProgrammerSM/EssentialLayers</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>Dapper Results Cache Error Handling Blobs Helpers Exstension Web-Requests</PackageTags>
-    <PackageReadmeFile>Readme.md</PackageReadmeFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<LangVersion>12.0</LangVersion>
+		<Description>Essential layers to start a project from scratch with a structure designed in Dapper, Results, Cache, Error-handling, Logger, Blobs, Helpers, Extensions and web requests</Description>
+		<Product>MSoto Company</Product>
+		<Company>MSoto Company</Company>
+		<Copyright>msotomor</Copyright>
+		<PackageProjectUrl>https://essentiallayers.dev</PackageProjectUrl>
+		<PackageIcon>essential-layers.png</PackageIcon>
+		<RepositoryUrl>https://github.com/MatProgrammerSM/EssentialLayers</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>Dapper Results Cache Error Handling Blobs Helpers Exstension Web-Requests</PackageTags>
+		<PackageReadmeFile>Readme.md</PackageReadmeFile>
+		<Version>1.1.8</Version>
+		<Title>Essential Layers</Title>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\shared\essential-layers.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-    <None Include="..\shared\Readme.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+	  <None Include="..\shared\essential-layers.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\shared\Readme.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
-    <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
+		<PackageReference Include="Dapper" Version="2.1.35" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="Serilog" Version="4.0.1" />
+	</ItemGroup>
 
 </Project>
