--- a/EssentialLayers/EssentialLayers.csproj
+++ b/EssentialLayers/EssentialLayers.csproj
@@ -13,8 +13,9 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Dapper Results Cache Error Handling Blobs Helpers Exstension Web-Requests</PackageTags>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
-		<Version>1.1.8</Version>
+		<Version>1.1.9</Version>
 		<Title>Essential Layers</Title>
+		<PackageReleaseNotes>It was tested the Azure, Database and Http services</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -31,10 +32,10 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
 		<PackageReference Include="Dapper" Version="2.1.35" />
-		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-		<PackageReference Include="Serilog" Version="4.0.1" />
 	</ItemGroup>
 
 </Project>
