--- a/EssentialLayers.Dapper/EssentialLayers.Dapper.csproj
+++ b/EssentialLayers.Dapper/EssentialLayers.Dapper.csproj
@@ -36,4 +36,8 @@
 	    <PackagePath>\</PackagePath>
 	  </None>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Helpers\" />
+	</ItemGroup>
 </Project>
