--- a/EssentialLayers.AzureBlobs/EssentialLayers.AzureBlobs.csproj
+++ b/EssentialLayers.AzureBlobs/EssentialLayers.AzureBlobs.csproj
@@ -4,6 +4,20 @@
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>12.0</LangVersion>
 		<Nullable>enable</Nullable>
+		<Title>$(AssemblyName)</Title>
+		<Version>1.0.0</Version>
+		<Authors>MSoto</Authors>
+		<Company>Mario Soto Moreno Co</Company>
+		<Product>$(AssemblyName)</Product>
+		<Description>EssentialLayers.AzureBlobs is a complement to the package `EssentialLayers` to provide an extra layer to use Azure Blobs in an easy way.</Description>
+		<Copyright>mariosotomor.dev@gmail.com</Copyright>
+		<PackageProjectUrl>https://essentiallayers.dev</PackageProjectUrl>
+		<PackageIcon>essential-layers.png</PackageIcon>
+		<PackageReadmeFile>Readme.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/MatProgrammerSM/EssentialLayershttps://github.com/MatProgrammerSM/EssentialLayers</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>Azure Blobs Upload Dowload Delete</PackageTags>
+		<PackageReleaseNotes>New service to work with Azure Blobs</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
