--- a/EssentialLayers.Request/EssentialLayers.Request.csproj
+++ b/EssentialLayers.Request/EssentialLayers.Request.csproj
@@ -1,39 +1,41 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>12.0</LangVersion>
 		<Nullable>enable</Nullable>
+		<PackageId>$(AssemblyName)</PackageId>
 		<Title>$(AssemblyName)</Title>
 		<Version>1.0.0</Version>
 		<Authors>MSoto</Authors>
 		<Company>Mario Soto Moreno Co</Company>
-		<Description>EssentialLayers.Dapper is a complement to the package EssentialLayers to offer an extra layer with the ORM dapper in an easy way, where the main purpose will be, write the business logic in the "stored procedures" using templates that receiving input parameters and return a result set, Currently is just compatible with SQL Server.</Description>
+		<Description>EssentialLayers.Request is a complement to the package `EssentialLayers` to provide an extra layer for using http requests in an easy way.</Description>
 		<Copyright>mariosotomor.dev@gmail.com</Copyright>
 		<PackageProjectUrl>https://essentiallayers.dev</PackageProjectUrl>
 		<PackageIcon>essential-layers.png</PackageIcon>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
 		<RepositoryUrl>https://github.com/MatProgrammerSM/EssentialLayers</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>Dapper Database MicroORM Helpers</PackageTags>
-		<PackageReleaseNotes>New service to work with micro ORM dapper</PackageReleaseNotes>
+		<PackageTags>Request Http Delete Get Post Put</PackageTags>
+		<PackageReleaseNotes>New service to work with Http Request</PackageReleaseNotes>
 	</PropertyGroup>
+
 	<ItemGroup>
-	  <None Include="..\shared\essential-layers.png">
-	    <Pack>True</Pack>
+	  <None Include="..\shared\essential-layers.png" Link="essential-layers.png">
 	    <PackagePath>\</PackagePath>
+	    <Pack>True</Pack>
 	  </None>
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Dapper" Version="2.1.35" />
 		<PackageReference Include="EssentialLayers" Version="1.2.0" />
-		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Update="Readme.md">
-	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
+	    <Pack>True</Pack>
 	  </None>
 	</ItemGroup>
+
 </Project>
