Update versións + Docs about all functionalities

--- a/EssentialLayers/EssentialLayers.csproj
+++ b/EssentialLayers/EssentialLayers.csproj
@@ -35,6 +35,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Update="Helpers\Readme.md">
+	    <PackagePath>\</PackagePath>
+	    <Pack>True</Pack>
+	  </None>
 	  <None Update="Readme.md">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
