--- a/EssentialLayers.AzureBlobs/EssentialLayers.AzureBlobs.csproj
+++ b/EssentialLayers.AzureBlobs/EssentialLayers.AzureBlobs.csproj
@@ -5,7 +5,7 @@
 		<LangVersion>12.0</LangVersion>
 		<Nullable>enable</Nullable>
 		<Title>$(AssemblyName)</Title>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 		<Authors>MSoto</Authors>
 		<Company>Mario Soto Moreno Co</Company>
 		<Product>$(AssemblyName)</Product>
@@ -28,7 +28,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EssentialLayers" Version="1.2.0" />
+		<PackageReference Include="EssentialLayers" Version="1.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -37,6 +37,10 @@
 			<Pack>True</Pack>
 		</None>
 		<None Update="Services\Blob\Readme.md">
+		  <PackagePath>\</PackagePath>
+		  <Pack>True</Pack>
+		</None>
+		<None Update="Services\Readme.md">
 		  <PackagePath>\</PackagePath>
 		  <Pack>True</Pack>
 		</None>
