--- a/EssentialLayers.Request/EssentialLayers.Request.csproj
+++ b/EssentialLayers.Request/EssentialLayers.Request.csproj
@@ -28,11 +28,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EssentialLayers" Version="1.2.0" />
+		<PackageReference Include="EssentialLayers" Version="1.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Update="Readme.md">
+	    <PackagePath>\</PackagePath>
+	    <Pack>True</Pack>
+	  </None>
+	  <None Update="Services\Http\Readme.md">
 	    <PackagePath>\</PackagePath>
 	    <Pack>True</Pack>
 	  </None>
