--- a/EssentialLayers.AzureBlobs/EssentialLayers.AzureBlobs.csproj
+++ b/EssentialLayers.AzureBlobs/EssentialLayers.AzureBlobs.csproj
@@ -5,7 +5,7 @@
 		<LangVersion>12.0</LangVersion>
 		<Nullable>enable</Nullable>
 		<Title>$(AssemblyName)</Title>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 		<Authors>MSoto</Authors>
 		<Company>Mario Soto Moreno Co</Company>
 		<Product>$(AssemblyName)</Product>
@@ -17,7 +17,7 @@
 		<RepositoryUrl>https://github.com/MatProgrammerSM/EssentialLayershttps://github.com/MatProgrammerSM/EssentialLayers</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Azure Blobs Upload Dowload Delete</PackageTags>
-		<PackageReleaseNotes>New service to work with Azure Blobs</PackageReleaseNotes>
+		<PackageReleaseNotes>Fixed error: "System.InvalidOperationException: 'Cannot resolve scoped service 'EssentialLayers.AzureBlobs.Services.Blob.IAzureBlobService' from root provider.'"</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
