--- a/EssentialLayers/EssentialLayers.csproj
+++ b/EssentialLayers/EssentialLayers.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>12.0</LangVersion>
-		<Description>Essential.Layers is a library based in a `way of work functional to start a project from scratch` with a structure designed with Result handling, Cache, Error handling, Helpers, JWT Token &amp; Extensions.</Description>
+		<Description>Essential.Layers is a library based in a `way of work functional to start a project from scratch` with a structure designed with Result handling, Cache, Error handling, Helpers &amp; Extensions.</Description>
 		<Product>$(AssemblyName)</Product>
 		<Company>Mario Soto Moreno Co</Company>
 		<Copyright>mariosotomor.dev@gmail.com</Copyright>
@@ -11,11 +11,11 @@
 		<PackageIcon>essential-layers.png</PackageIcon>
 		<RepositoryUrl>https://github.com/MatProgrammerSM/EssentialLayers</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>Result-Handling Cache Error-Handling Helpers JWT-Token Exstension</PackageTags>
+		<PackageTags>Result-Handling Cache Error-Handling Helpers Exstension</PackageTags>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
-		<Version>1.3.1</Version>
+		<Version>1.4.0</Version>
 		<Title>$(AssemblyName)</Title>
-		<PackageReleaseNotes>It was removed AzureBlob package + Update versión of JWT Token package</PackageReleaseNotes>
+		<PackageReleaseNotes>It was removed token because it was created a new layer called "EssentialLayers.Token"</PackageReleaseNotes>
 		<Authors>MSoto</Authors>
 	</PropertyGroup>
 
@@ -29,8 +29,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
-		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.0" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.0" />
+		<PackageReference Include="System.Text.Json" Version="8.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
