--- a/EssentialLayers/EssentialLayers.csproj
+++ b/EssentialLayers/EssentialLayers.csproj
@@ -13,9 +13,9 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Result-Handling Cache Error-Handling Helpers Exstension</PackageTags>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
-		<Version>1.4.2</Version>
+		<Version>1.4.4</Version>
 		<Title>$(AssemblyName)</Title>
-		<PackageReleaseNotes>Removed estension methods &amp; added Any, NotAny to objects</PackageReleaseNotes>
+		<PackageReleaseNotes>Fixed Any &amp; NotAny methods</PackageReleaseNotes>
 		<Authors>MSoto</Authors>
 	</PropertyGroup>
 
